--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.5.0",
+    "@dicebear/collection": "^7.0.4",
+    "@dicebear/core": "^7.0.4",
     "@hughrun/feedfinder": "^1.0.11",
     "dayjs": "^1.10.6",
     "framer-motion": "^4.1.17",
@@ -26,6 +28,6 @@
     "rss-to-json": "^2.0.2",
     "sharp": "^0.32.3",
     "styled-icons": "^10.47.0",
-    "yt-channel-info": "^2.2.0"
+    "youtubei": "^1.3.3"
   }
 }
