--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "rss-finder": "^2.1.5",
     "rss-to-json": "^2.0.2",
     "sharp": "^0.32.3",
-    "styled-icons": "^10.47.0",
-    "youtubei": "^1.3.3"
+    "styled-icons": "^10.47.0"
   }
 }
